    files out of the library package. (Policy 8.2). Brings QOF up to
    date with Standards Version 3.8.0.
  * qof-data still needs Replaces: libqof1 anyway.
  * Add symlink to make devhelp support accessible.
  * implement nocheck DEB_BUILD_OPTION
  * omit backend plugins from dh_makeshlibs - not public anymore.
  * Provide: virtual packages for each backend for easier transitions.

 -- Neil Williams <codehelp@debian.org>  Sun, 03 May 2009 17:32:48 +0100

qof (0.7.5-1) unstable; urgency=low

  * New upstream release.
  * erronous check for *linux* to detect symbols versioning support
    (Closes: #463392)

 -- Neil Williams <codehelp@debian.org>  Thu, 31 Jan 2008 19:12:59 +0000

qof (0.7.4-1) unstable; urgency=low

  * New upstream release.
  * Implement versioned symbols and a symbols file for each library
  * Avoid preparing docs in Emdebian
  * does not contain separated debugging symbols (Closes: #462007)
  * Fix the CVS location to allow debcheckout to work

 -- Neil Williams <codehelp@debian.org>  Fri, 25 Jan 2008 21:35:43 +0000

qof (0.7.3-1) unstable; urgency=low

  * New upstream release
  * debian/control: migrate doxygen to Build-Depends-Indep
  * debian/control: use new dpkg fields
  * configure.in : tidy up use of qofsql for embedded use
  * make the sqlite backend build by default
  * Remove GFDL from debian/copyright and migrate to standards 3.7.3
  * Migrate to libgda3-3
  * qof -- Please consider transitioning to libgda3 (Closes: #455835)
  * Add full cross build support, including regexp in .install file to
    cover libqof1 and libqofsql (if built)

 -- Neil Williams <codehelp@debian.org>  Sat, 15 Dec 2007 20:13:31 +0000

qof (0.7.2-1) unstable; urgency=low

  * New upstream release.
  - upgrade binNMU support to avoid deprecated Source-Version
  * Change my email address to new Debian one.

 -- Neil Williams <codehelp@debian.org>  Mon, 27 Nov 2006 09:43:43 +0000

qof (0.7.1-3) unstable; urgency=low
